Fix flags on mobile

--- a/sass/styles/components/_header.scss
+++ b/sass/styles/components/_header.scss
@@ -205,7 +205,7 @@
 					border-left: solid 15px $color-secondary-dark;
 					border-bottom: solid 11.5px transparent;
 					border-top: solid 11.5px transparent;
-					margin-left: -27px;
+					left: -7px;
 					top: calc(50% - 23px / 2);
 				}
 			}
